InformationRetrievalSystem/out/production/SVM/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;G:\KKK\SVM
-d
G:\KKK\SVM\doc
-encoding
UTF-8
-charset
UTF-8
G:\KKK\SVM\Checkfor.java
<---- end of javadoc command ---->
Loading source file G:\KKK\SVM\Checkfor.java...
Constructing Javadoc information...
Standard Doclet version 11.0.2
Building tree for all the packages and classes...
Generating G:\KKK\SVM\doc\Checkfor.html...
G:\KKK\SVM\VectorArray_OLD.java:2: error: class VectorArray is public, should be declared in a file named VectorArray.java
public class VectorArray {
       ^
Generating G:\KKK\SVM\doc\package-summary.html...
Generating G:\KKK\SVM\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating G:\KKK\SVM\doc\allclasses.html...
Generating G:\KKK\SVM\doc\allclasses.html...
Generating G:\KKK\SVM\doc\index.html...
1 error
